--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,1 +1,17 @@
-I
+{% extends "myapp/base.html"%}
+{% load static %}
+
+{% block extra_style %}
+<link rel="stylesheet" href="{% static 'myapp/css/index.css' %}">
+{% endblock %}
+
+{% block header %}{% endblock %}
+{% block content %}
+<div class="index-button">
+    <a href=login class="button">ログイン</a>
+    <br>
+    <a href=signup class="button">会員登録</a>
+</div>
+{% endblock %}
+{% block footer %}{% endblock %}
+{% block extra_js %}{% endblock %}
