--- a/myapp/static/myapp/css/password_change.css
+++ b/myapp/static/myapp/css/password_change.css
@@ -5,7 +5,7 @@
 }
 
 
-.button{
+button{
     display: block;
     color: #000;
     text-align: center;
@@ -18,6 +18,19 @@
     padding-top: 10px;
     padding-bottom: 10px;
     text-decoration: none;
-    margin-top: 5%;
 }
 
+h2{
+    display: block;
+    text-align: center;
+    margin: auto;
+    padding:10px 0;
+}
+
+
+form{
+    display: block;
+    text-align: center;
+    margin: auto;
+    padding:10px 0;
+}
