--- a/myapp/templates/myapp/email_change_done.html
+++ b/myapp/templates/myapp/email_change_done.html
@@ -1,34 +1,13 @@
-
 {% extends "myapp/base.html"%}
 {% load static %}
 {% block extra_style %}
-<link rel="stylesheet" href="{% static 'myapp/css/friends.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/password_change.css' %}">
 {% endblock %}
 {% block header %}
-<div class=header>友達</div>
+<div class=header>メールアドレス変更</div>
 {% endblock %}
 {% block content %}
-
-<div class="body">
-        {% for obj in object_list %}
-        <a href= "{% url 'talk_room' obj.id %}" class="container"> 
-            {%if obj.image%}<img src="{{obj.image.url}}" class="boxA">{%endif%}
-            <span class="boxB">{{obj.username}}</span>
-            {% for i in talk%}
-                {%if i.message_from == user and i.message_to == obj or i.message_from == obj and i.message_to == user %}
-                <span class="boxC">{{i.talk}}</span>
-                <span class="boxD">{{i.time|date:"m/d H:i"}}</span>
-                {%endif%}{% endfor%}
-            
-        </a>
-        {%empty%}
-        {% endfor %}
-</div>
-
-
-
-
-
+<h2>メールアドレス変更完了</h2>
 {% endblock %}
 {% block footer %}
 <footer class="footer">
