--- a/myapp/templates/myapp/image_change.html
+++ b/myapp/templates/myapp/image_change.html
@@ -1,34 +1,35 @@
-
 {% extends "myapp/base.html"%}
 {% load static %}
 {% block extra_style %}
-<link rel="stylesheet" href="{% static 'myapp/css/friends.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/image_change.css' %}">
 {% endblock %}
 {% block header %}
-<div class=header>友達</div>
+<div class=header>アイコン変更</div>
 {% endblock %}
 {% block content %}
-
-<div class="body">
-        {% for obj in object_list %}
-        <a href= "{% url 'talk_room' obj.id %}" class="container"> 
-            {%if obj.image%}<img src="{{obj.image.url}}" class="boxA">{%endif%}
-            <span class="boxB">{{obj.username}}</span>
-            {% for i in talk%}
-                {%if i.message_from == user and i.message_to == obj or i.message_from == obj and i.message_to == user %}
-                <span class="boxC">{{i.talk}}</span>
-                <span class="boxD">{{i.time|date:"m/d H:i"}}</span>
-                {%endif%}{% endfor%}
-            
-        </a>
-        {%empty%}
-        {% endfor %}
+<div class="container">
+    <p class="boxA">画像：</p>
+    <div class="boxB">
+    現在：{{user.image}}
+    </div>
+    <div class="boxC">変更：<form method="post" enctype="multipart/form-data"  style="padding-left:20px;">
+    {% csrf_token %}
+    {{ form.as_p }}
+    </div>
 </div>
+{% if user.is_authenticated %}
+<div class="item">
+    現在の画像
+    <br>
+    <img src="{{user.image.url}}" width="80px">
 
-
-
-
-
+    {% else %}
+    <p>ログインしていません</p>
+    {% endif %}
+    <br>
+    <button type="submit">変更</button>
+    </form>
+</div>
 {% endblock %}
 {% block footer %}
 <footer class="footer">
