--- a/myapp/templates/myapp/signup.html
+++ b/myapp/templates/myapp/signup.html
@@ -1,1 +1,24 @@
-SU
+{% extends "myapp/base.html"%}
+{% load static %}
+{% block extra_style %}
+<link rel="stylesheet" href="{% static 'myapp/css/signup.css' %}">
+{% endblock %}
+{% block header %}
+<div class=header>会員登録</div>
+{% endblock %}
+{% block content %}
+<form action="signup" method="post"  enctype="multipart/form-data">
+{% csrf_token %}
+<div>
+    <form method="post" enctype="multipart/form-data" ,class="form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Sign up</button>
+    </form>
+</div>
+
+
+
+{% endblock %}
+{% block footer %}{% endblock %}
+{% block extra_js %}{% endblock %}
