--- a/myapp/templates/myapp/username_change.html
+++ b/myapp/templates/myapp/username_change.html
@@ -1,34 +1,17 @@
-
 {% extends "myapp/base.html"%}
 {% load static %}
 {% block extra_style %}
-<link rel="stylesheet" href="{% static 'myapp/css/friends.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/password_change.css' %}">
 {% endblock %}
 {% block header %}
-<div class=header>友達</div>
+<div class=header>ユーザー名変更</div>
 {% endblock %}
 {% block content %}
-
-<div class="body">
-        {% for obj in object_list %}
-        <a href= "{% url 'talk_room' obj.id %}" class="container"> 
-            {%if obj.image%}<img src="{{obj.image.url}}" class="boxA">{%endif%}
-            <span class="boxB">{{obj.username}}</span>
-            {% for i in talk%}
-                {%if i.message_from == user and i.message_to == obj or i.message_from == obj and i.message_to == user %}
-                <span class="boxC">{{i.talk}}</span>
-                <span class="boxD">{{i.time|date:"m/d H:i"}}</span>
-                {%endif%}{% endfor%}
-            
-        </a>
-        {%empty%}
-        {% endfor %}
-</div>
-
-
-
-
-
+<form method="post" style="padding-left:20px;">
+{% csrf_token %}
+{{ form.as_p }}
+<button type="submit">変更</button>
+</form>
 {% endblock %}
 {% block footer %}
 <footer class="footer">
