--- a/myapp/static/myapp/css/talk_room.css
+++ b/myapp/static/myapp/css/talk_room.css
@@ -35,6 +35,7 @@
     font-size: 32px;
     color: #000;
     margin-top: 24px;
+    overflow-wrap: normal;
 }
 
 .header-container{
@@ -57,9 +58,9 @@
 
 .container{
 
-    height: 65px;
+    height: auto;
     display: grid;
-    grid-template-rows: 17px 38px;
+    grid-template-rows: 17px auto;
     grid-template-columns: 5fr 1fr;
     border-bottom: solid 1px #9b9b9b;
     overflow: auto;
@@ -71,6 +72,7 @@
     grid-column-start: 1;
     grid-column-end: span 1;
     color: darkgray;
+    margin-left:10px;
 }
 
 .boxB{
@@ -83,6 +85,8 @@
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 32px;
+    margin-right: 32px;
+    word-wrap: break-word;
 }
 
 .boxC{
@@ -92,6 +96,8 @@
     grid-column-end: span 1;
     text-decoration: none;
     color: darkgray;
+    text-align: right;
+    margin-right: 10px;
 }
 
 .body{
