--- a/myapp/static/myapp/css/friends.css
+++ b/myapp/static/myapp/css/friends.css
@@ -11,7 +11,7 @@
 
 .container{
     width: 100%;
-    height: 64px;
+    height: auto;
     display: grid;
     grid-template-rows: 30px auto;
     grid-template-columns: 1fr 3fr 1fr;
